@@ -5,9 +5,11 @@ import com.cmsr.onebase.framework.common.util.object.BeanUtils;
 import com.cmsr.onebase.module.app.core.dal.database.menu.AppMenuRepository;
 import com.cmsr.onebase.module.app.core.dal.database.resource.AppComponentRepository;
 import com.cmsr.onebase.module.app.core.dal.database.resource.AppPageRepository;
-import com.cmsr.onebase.module.app.core.dal.database.resource.AppPageSetPageRepository;
 import com.cmsr.onebase.module.app.core.dal.database.resource.AppPageSetRepository;
-import com.cmsr.onebase.module.app.core.dal.dataobject.*;
+import com.cmsr.onebase.module.app.core.dal.dataobject.AppMenuDO;
+import com.cmsr.onebase.module.app.core.dal.dataobject.AppResourceComponentDO;
+import com.cmsr.onebase.module.app.core.dal.dataobject.AppResourcePageDO;
+import com.cmsr.onebase.module.app.core.dal.dataobject.AppResourcePagesetDO;
 import com.cmsr.onebase.module.app.core.dto.appresource.ComponentDTO;
 import com.cmsr.onebase.module.app.core.dto.appresource.PageDTO;
 import com.cmsr.onebase.module.app.core.dto.appresource.PageSetRespDTO;
@@ -19,6 +21,7 @@ import com.cmsr.onebase.module.app.core.vo.resource.ListPageSetRespVO;
 import com.cmsr.onebase.module.app.core.vo.resource.LoadPageSetReqVO;
 import com.cmsr.onebase.module.app.core.vo.resource.LoadPageSetRespVO;
 import jakarta.annotation.Resource;
+import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.stereotype.Service;
@@ -26,8 +29,8 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
+@Setter
 @Service
 @Slf4j
 public class PageSetServiceProvider {
@@ -36,13 +39,10 @@ public class PageSetServiceProvider {
     private WorkBenchPageSetServiceProvider workBenchPageSetService;
 
     @Resource
-    private AppPageSetRepository pageSetDataRepository;
+    private AppPageSetRepository appPageSetRepository;
 
     @Resource
-    private AppPageSetPageRepository pageSetPageDataRepository;
-
-    @Resource
-    private AppPageRepository pageDataRepository;
+    private AppPageRepository pageRepository;
 
     @Resource
     private AppComponentRepository componentDataRepository;
@@ -50,66 +50,64 @@ public class PageSetServiceProvider {
     @Resource
     private AppMenuRepository appMenuRepository;
 
-    public Long getPageSetId(Long menuId) {
-        AppResourcePagesetDO pageSetDO = pageSetDataRepository.findPageSetByMenuId(menuId);
-        return pageSetDO.getId();
+    public Long getPageSetIdByMenuId(Long menuId) {
+        AppMenuDO appMenuDO = appMenuRepository.getById(menuId);
+        AppResourcePagesetDO pagesetDO = appPageSetRepository.findPageSetByAppIdAndMenuUuid(
+                appMenuDO.getApplicationId(),
+                appMenuDO.getMenuUuid());
+        return pagesetDO.getId();
     }
 
 
     public Long getAppId(Long pageSetId) {
-        AppResourcePagesetDO pageSetDO = pageSetDataRepository.getById(pageSetId);
-        Long menuId = pageSetDO.getMenuId();
-        AppMenuDO menuDO = appMenuRepository.getById(menuId);
-        return menuDO.getApplicationId();
+        AppResourcePagesetDO pageSetDO = appPageSetRepository.getById(pageSetId);
+        return pageSetDO.getApplicationId();
     }
 
 
     public String getMainMetadata(Long pageSetId) {
-        AppResourcePagesetDO pageSetDO = pageSetDataRepository.getById(pageSetId);
+        AppResourcePagesetDO pageSetDO = appPageSetRepository.getById(pageSetId);
         return pageSetDO.getMainMetadata();
     }
 
 
     public LoadPageSetRespVO loadPageSet(LoadPageSetReqVO loadPageSetReqVO) {
-        AppResourcePagesetDO pageSetDO = pageSetDataRepository.getById(loadPageSetReqVO.getId());
-
+        AppResourcePagesetDO pageSetDO = appPageSetRepository.getById(loadPageSetReqVO.getId());
         if (pageSetDO == null) {
             throw ServiceExceptionUtil.exception(AppResourceErrorCodeConstants.PAGE_SET_NOT_EXIST);
         }
-
+        Long applicationId = pageSetDO.getApplicationId();
         // 读取页面集中的页面
-        List<AppResourcePagesetPageDO> pageSetPageDOs = pageSetPageDataRepository.findByPageSetId(pageSetDO.getId());
+        List<Long> pageIdList = pageRepository.findIdsByAppIdAndPageSetUuid(applicationId, pageSetDO.getPageSetUuid());
 
         if (PageTypeSetEnum.isWorkBenchType(pageSetDO.getPageSetType())) {
             /**
              * 加载工作台页面配置
              */
-            return workBenchPageSetService.loadWorkbenchPageSet(pageSetDO, pageSetPageDOs);
+            return workBenchPageSetService.loadWorkbenchPageSet(pageSetDO);
         }
 
-        List<AppResourcePageDO> pageDOs = pageSetPageDOs.stream()
-                .map(pageSetPageDO -> {
-                    AppResourcePageDO pageDO = pageDataRepository.getById(pageSetPageDO.getPageId());
-
+        List<AppResourcePageDO> pageDOs = pageIdList.stream()
+                .map(pageId -> {
+                    AppResourcePageDO pageDO = pageRepository.getById(pageId);
                     if (pageDO == null) {
                         // 如果找不到对应的页面，记录错误并跳过
-                        log.warn("Page not found for pageRef: {}", pageSetPageDO.getPageId());
+                        log.warn("Page not found for pageRef: {}", pageId);
                         return null;
                     }
                     return pageDO;
                 })
-                .filter(Objects::nonNull) // 过滤掉null值
+                .filter(Objects::nonNull)
                 .toList();
 
         LoadPageSetRespVO loadPageSetRespVO = new LoadPageSetRespVO();
         loadPageSetRespVO.setId(pageSetDO.getId());
         loadPageSetRespVO.setPageSetType(pageSetDO.getPageSetType());
-        List<PageDTO> pageDTOs = new ArrayList<>();
 
         // 读取每个页面的组件和配置
+        List<PageDTO> pageDTOs = new ArrayList<>();
         pageDOs.forEach(pageDO -> {
-            List<AppResourceComponentDO> componentDOs = componentDataRepository.findByPageId(pageDO.getId());
-
+            List<AppResourceComponentDO> componentDOs = componentDataRepository.findByAppIdAndPageUuid(applicationId, pageDO.getPageUuid());
             PageDTO pageDTO = BeanUtils.toBean(pageDO, PageDTO.class);
             pageDTO.setComponents(componentDOs.stream()
                     .map(componentDO -> BeanUtils.toBean(componentDO, ComponentDTO.class))
@@ -125,7 +123,7 @@ public class PageSetServiceProvider {
 
 
     public PageSetRespDTO getPageSet(Long pageSetId) {
-        AppResourcePagesetDO pageSetDO = pageSetDataRepository.getById(pageSetId);
+        AppResourcePagesetDO pageSetDO = appPageSetRepository.getById(pageSetId);
         if (pageSetDO == null) {
             throw ServiceExceptionUtil.exception(AppResourceErrorCodeConstants.PAGE_SET_NOT_EXIST);
         }
@@ -145,21 +143,21 @@ public class PageSetServiceProvider {
         if (pageSetType != null) {
             PageTypeEnum.validate(pageSetType);
         }
-
+        Long applicationId = listPageSetReqVO.getApplicationId();
         // 查询应用菜单ID
-        List<AppMenuDO> menuDOS = appMenuRepository.findByApplicationId(listPageSetReqVO.getApplicationId());
+        List<AppMenuDO> menuDOS = appMenuRepository.findByApplicationId(applicationId);
 
         if (CollectionUtils.isEmpty(menuDOS)) {
             return respVO;
         }
 
-        List<Long> menuIds = menuDOS.stream().map(AppMenuDO::getId).collect(Collectors.toList());
+        List<String> menuUuids = menuDOS.stream().map(AppMenuDO::getMenuUuid).toList();
         List<AppResourcePagesetDO> pageSetDOs;
 
         if (pageSetType != null) {
-            pageSetDOs = pageSetDataRepository.findByMenuIdAndType(menuIds, pageSetType);
+            pageSetDOs = appPageSetRepository.findByMenuUuidAndType(applicationId, menuUuids, pageSetType);
         } else {
-            pageSetDOs = pageSetDataRepository.findByMenuIds(menuIds);
+            pageSetDOs = appPageSetRepository.findByMenuUuids(applicationId, menuUuids);
         }
 
         respVO.setPageSets(pageSetDOs.stream()
